# shutterspeed2

./: .gitignore  Cargo.toml  README.md  flash.sh  rust-toolchain.toml
.cargo/: config.toml
app/: Cargo.toml  memory.x
app-measurements/: Cargo.toml
app-measurements/src/: calibration.rs  lib.rs  measurement.rs  util.rs
app-ui/: Cargo.toml
app-ui/src/: badge.rs  chart.rs  config.rs  fonts.rs  format.rs  fx.rs  lib.rs  panic.rs  ruler.rs  util.rs
app-ui/src/elements/: badge.rs  chart.rs  mod.rs  ruler.rs
app-ui/src/primitives/: cross.rs  pointer.rs
app-ui/src/screens/: boot.rs  calibration.rs  debug.rs  measurement.rs  menu.rs  mod.rs  no_accessory.rs  results.rs  start.rs  update.rs
app/src/: display.rs  format.rs  hardware_config.rs  main.rs  measurement.rs  panic.rs  sound.rs  util.rs
app/src/ui/: mod.rs
app/src/ui/screens/: debug.rs  measurement.rs  mod.rs  results.rs  start.rs  update.rs
bootloader/: Cargo.toml  memory.x
bootloader-api/: Cargo.toml  link.x
bootloader-api/src/: lib.rs
bootloader/src/: main.rs
config/: Cargo.toml
config/src/: lib.rs  macros.rs
src/: adc.rs  display.rs  dwt.rs  format.rs  hardware_config.rs  main.rs  main2.rs  measurement.rs  ui.rs  util.rs
src/ui/: fonts.rs  mod.rs
src/ui/primitives/: cross.rs  mod.rs  pointer.rs
src/ui/screens/: calibration.rs  debug.rs  mod.rs  results.rs
ui-test/: Cargo.toml  rust-toolchain.toml
ui-test/.cargo/: config.toml
ui-test/src/: main.rs
