[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "shutterspeed"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "*"
stm32f4xx-hal = { version = "0.19", features = ["stm32f401"] }

mipidsi = "0.7.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-time = "0.12.1"
fugit = "0.3.7"
ufmt = "0.2.0"
heapless = { version = "0.8.0", features = ["ufmt"] }
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }
embedded-text = "0.7.0"
rtic-monotonics = { version = "1.4.1", features = [
    "stm32f401cc",
    "stm32_tim3",
    "cortex-m-systick",
] }
rtic = { version = "2", features = [
    "cortex-m",
    "rtic-monotonics",
    "thumbv7-backend",
] }
cortex-m-microclock = "0.1.0"
micromath = { version = "2.1.0", features = ["num-traits"] }
embedded-alloc = "0.5.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "shutterspeed"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "z"
