[workspace]
members = ["app", "bootloader", "bootloader-api"]
default-members = ["app"]

[workspace.dependencies]
cortex-m = "*"
cortex-m-rt = { version = "0.7.3" }
cortex-m-semihosting = "0.5.0"
embedded-hal = "*"
stm32f4xx-hal = { version = "0.19", features = [
    "stm32f401",
    "otg-fs",
    "usb_fs",
] }


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"


[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
opt-level = "z"
strip = "debuginfo"
