[workspace]
members = ["app", "app-ui", "app-measurements", "bootloader", "bootloader-api"]
default-members = ["app"]
resolver = "2"

[workspace.dependencies]
cortex-m = "*"
cortex-m-rt = { version = "0.7.3" }
cortex-m-semihosting = "0.5.0"
embedded-hal = "*"
stm32f4xx-hal = { version = "0.19", features = [
    "stm32f401",
    "otg-fs",
    "usb_fs",
] }
rtic-monotonics = { version = "1.4.1", features = [
    "stm32f401cc",
    "stm32_tim3",
    "cortex-m-systick",
] }
ufmt = "0.2.0"

embedded-graphics = "0.8.0"
heapless = { version = "0.8.0", features = ["ufmt"] }
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }
embedded-text = "0.7.0"
embedded-graphics-framebuf = "0.5.0"
enum_dispatch = "0.3.12"
fugit = "0.3.7"
cortex-m-microclock = "0.1.0"
embedded-time = "0.12.1"
micromath = { version = "2.1.0", features = ["num-traits"] }


[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
opt-level = "z"
strip = "debuginfo"
