cargo-features = ["per-package-target"]

[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"
forced-target = "thumbv7m-none-eabi"

[[bin]]
name = "app"
test = false
bench = false

[dependencies]
bootloader-api = { path = "../bootloader-api" }
app-measurements = { path = "../app-measurements", features = ["cortex-m"] }
app-ui = { path = "../app-ui", features = ["cortex-m"] }
config = { path = "../config" }

cortex-m-rt = { workspace = true, features = ["set-sp", "set-vtor"] }
cortex-m.workspace = true
cortex-m-semihosting.workspace = true
embedded-hal.workspace = true
stm32f4xx-hal.workspace = true

micromath.workspace = true
embedded-graphics.workspace = true
heapless.workspace = true
u8g2-fonts.workspace = true
embedded-text.workspace = true
embedded-graphics-framebuf.workspace = true

rtic-monotonics.workspace = true

mipidsi = "0.7.1"
display-interface-spi = "0.4.1"
embedded-time.workspace = true
fugit.workspace = true
ufmt.workspace = true
rtic = { version = "2", features = [
    "cortex-m",
    "rtic-monotonics",
    "thumbv7-backend",
] }
cortex-m-microclock.workspace = true
embedded-alloc = "0.5.1"
enum_dispatch.workspace = true
usb-device = "0.3.0"
usbd-serial = "0.2.0"
ouroboros = { version = "0.18.2", default-features = false }
note_frequencies = "0.1.1"
rtic-sync = "1.2.0"

[features]
usb = []
effects = []
