[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "bootloader-api"
version = "0.1.0"

[lib]
name = "bootloader_api"
test = false
bench = false

[dependencies]
cortex-m-rt.workspace = true
cortex-m.workspace = true
cortex-m-semihosting.workspace = true
embedded-hal.workspace = true
stm32f4xx-hal.workspace = true
