cargo-features = ["per-package-target"]

[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "bootloader"
version = "0.1.0"
forced-target = "thumbv7m-none-eabi"

[[bin]]
name = "bootloader"
test = false
bench = false

[dependencies]
config = { path = "../config" }
bootloader-api = { path = "../bootloader-api" }
mipidsi.workspace = true
fugit.workspace = true
embedded-graphics.workspace = true
embedded-text.workspace = true
cortex-m-rt.workspace = true
cortex-m.workspace = true
cortex-m-semihosting.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true
stm32f4xx-hal.workspace = true
u8g2-fonts.workspace = true
panic-abort = "*"
