cargo-features = ["per-package-target"]

[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "config"
version = "0.1.0"
forced-target = "thumbv7m-none-eabi"

[lib]

[dependencies]
stm32f4xx-hal.workspace = true
fugit.workspace = true
display-interface-spi.workspace = true
embedded-time.workspace = true
app-measurements = { version = "0.1.0", path = "../app-measurements" }
