[workspace]

[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "ui-test"
version = "0.1.0"

[[bin]]
name = "ui_test"
path = "src/main.rs"
test = false
bench = false

[dependencies]
app-ui = { path = "../app-ui" }
app-measurements = { path = "../app-measurements" }

heapless = "0.8"
embedded-graphics = "0.8"
embedded-graphics-simulator = "0.6"
tokio = { version = "1.35.1", features = ["rt", "macros"] }

[features]
usb = []
